2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* configure.in: Add support for new target maxq-coff.
	* configure: Regenerate.
	* NEWS: Mention new support.
	* config/tc-maxq.c: New file.
	* config/tc-maxq.h: New file.
	* config/obj-coff.h: Add support for maxq-coff.

2004-11-08  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* symbols.c (any_external_name): Define.
	(resolve_symbol_value): Do not convert weak symbols.
	(S_SET_EXTERNAL): Support any_external_name.
	(S_SET_NAME): Qualify parameter const.
	(symbol_equated_reloc_p): Don't equate weaks when relocating.
	* symbols.h (S_SET_NAME): Qualfiy parameter const.
	* tc.h (any_external_name): Declare.
	* config/obj-coff.c ("coff/pe.h"): Include for BFD
	assemblers also.
	(weak_is_altname): Declare and define.
	(weak_name2altname): Same.
	(weak_altname2name): Same.
	(weak_uniquify): Same.
	(weak_altprefix): Define.
	(obj_coff_weak): Change .weak syntax and handling.
	(coff_frob_symbol): Fix PE weak symbol alternates.
	* config/obj-coff.h (USE_UNIQUE): Define.
	* config/tc-i386.c (md_apply_fix3): Assume weak symbols
	are in another segment.
	(tc_gen_reloc): Remove broken addend hack.
	doc/as.texinfo: Update.

2004-11-05  Sterling Augustine  <sterling@tensilica.com>

	* config/tc-xtensa.c (total_frag_text_expansion): New.
	(md_estimate_size_before_relax): Use it.
	(find_address_of_next_align_frag): Likewise.

2004-11-05  Tomer Levi  <Tomer.Levi@nsc.com>

	* config/tc-crx.c: Rename argument types.
	(processing_arg_number): Rename to 'cur_arg_num'.
	(get_number_of_bits): Rename to 'set_operand_size'.
	(get_operandtype): Rename to 'parse_operand', totally rewrite.
	(set_cons_rparams): Rename to 'set_operand', totally rewrite.
	(set_indexmode_parameters): Remove function, integrate its code into
	'set_operand'.
	(set_operand_size): Get rid of 'Operand Number' function parameter -
	use global variable 'cur_arg_num' instead.